# toppic-suite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  RELEASE_NOTE  fix_mods.txt  mods.txt  script  var_mods.txt  zip.sh
conf/: arguments.xml  configuration.xml  fix_mod_list_C57.xml  fix_mod_list_C58.xml  fix_mod_residue.xml  ion_type.xml  prot_mod.xml  ptm.xml  ptm.xml.backup  residue.xml
data/: rev_diag_index.txt  rev_term_index.txt  term_index.txt
doc/: Makefile.pwiz  linux_build.md  linux_lib_compilation  linux_xalan_msg_lib_makefile  manual.md  msconvert_linux.md  pwiz.patch  records_of_the_gui.md  topfd_manual.md  topmg_manual.md  toppic_manual.md  tutorial.md  windows_build.md  windows_xalanc_makefile  windows_xalanc_msg_lib_makefile
doc/wiki/: Comparison between Java 0.7 and c   implementation.docx  E value test result.docx  Frequently asked questions.docx  How to build and upload a docker image.docx  How to compile in Big Red 3 and Carbonate.docx  Speed test.docx  Steps for creating a dockerfile.docx  Test the accuracy of e value computation..docx  Test version 1.0 beta.docx  To do list.docx  TopMSVServer Deployment.docx  TopMSVServer-Home.docx  Update pwiz code.docx  Update the opensource version.docx
etc/: sorttable.js
ext/: README
ext/fdeep/: common.hpp
ext/htslib/: LICENSE  bgzf.h  config.h  faidx.c  hfile.c  hfile.h
ext/onnx/: onnxruntime_c_api.h
ext/pwiz/: Version.cpp  update_pwiz.sh
mzidGenerator/: .gitignore  README.md  ptm_data.hpp  tutorial.html  write_mzIdent.py
mzidGenerator/identipy/: utils_ik.py
mzidGenerator/psims/: document.py
releases/: LICENSE  release_checklist  toppic.iss  zip-linux-topfd.sh  zip-linux-topmg.sh  zip-linux-toppic.sh  zip-linux.sh  zip-win-topfd-cmd.bat  zip-win-topfd-gui.bat  zip-win-topfd.bat  zip-win-topmg-cmd.bat  zip-win-topmg.bat  zip-win-toppic-cmd.bat  zip-win-toppic-gui.bat  zip-win-toppic.bat  zip-win.bat
releases/example_files/: common_mods.txt  fixed_mod.txt  mass_graph_mods.txt
releases/inno_setup_script/: topmg.iss  toppic.iss
resources/: prsm.css
resources/ecscore_models/: ecscore_seven_attr.onnx
resources/envcnn_models/: escore.json
resources/p_value_table/: ppm5_ptm0.txt  ppm5_ptm1.txt
resources/topmsv/: README.md  node_modules.sh  tsconfig.json
scripts/: check_pvalue_table.R  copy_fasta_file.py  copyright.sh  copyright_template.txt  gen_all_proteoforms.py  lint.py  memory.sh  msalign_get_scan.py  msalign_merge.py  msalign_split.py  timing.sh  unimod.py  unimod.xml  util.py  util2.py
src/: .cproject  Make_memory.in  Makefile  Makefile.in  Makefile_linux.in  Makefile_win.in  README  RELEASE_NOTE  linux_var.mk  mass_shift_str.cpp  replace.sh  var.mk
src/base/: .acid.cc.swp  .change.hpp.swp  .proteoform.cpp.swp  .ptm.cpp.swp  BreakPoint.cpp  BreakPoint.hpp  GLOBAL.hpp  Makefile  ResListFactory.java  acid.cpp  acid.hpp  acid.xml  acid_base.cpp  acid_base.hpp  acid_util.cpp  acid_util.hpp  acid_vec.cpp  acid_vec.hpp  activation.cpp  activation.hpp  activation.xml  activation_base.cpp  activation_base.hpp  algorithm.cpp  algorithm.hpp  align_type.cpp  align_type.hpp  amino_acid.cpp  amino_acid.hpp  amino_acid_base.cpp  amino_acid_base.hpp  anno_change.cpp  anno_change.hpp  anno_residue.cpp  anno_residue.hpp  base_algo.cpp  base_algo.hpp  base_data.cpp  base_data.hpp  bp_spec.cpp  (+146 more)
src/console/: .argument.cpp.swp  Makefile  MsAlignPlus.cpp  argument.cpp  argument.hpp  command.cpp  command.hpp  console_util.cpp  console_util.hpp  main.cpp  output_selector.cpp  summary.cpp  summary.hpp  table_writer.cpp  table_writer.hpp  tag_long_filter.cpp  tag_var_filter.cpp  test_mcmc.cpp  topconvert.cpp  topconvert_process.cpp  topconvert_process.hpp  topdia.cpp  topdia_argument.cpp  topdia_argument.hpp  topdia_single.cpp  topdia_single_argument.cpp  topdia_single_argument.hpp  topdia_single_process.cpp  topdia_single_process.hpp  topdiff.cpp  topdiff_argument.cpp  topdiff_argument.hpp  topdiff_process.cpp  topdiff_process.hpp  topfd.cpp  topfd_argument.cpp  topfd_argument.hpp  topfd_process.cpp  topfd_process.hpp  topfd_single.cpp  (+41 more)
src/diagfilter/: Makefile  comp_shift.cpp  comp_shift.hpp  diag_filter.cpp  diag_filter.hpp  diag_filter_block.cpp  diag_filter_block.hpp  diag_filter_mng.hpp  diag_filter_processor.cpp  diag_filter_processor.hpp  mass_diag_filter.cpp  mass_diag_filter.hpp
src/env/: charge_cmp.cpp  charge_cmp.hpp  env_assign.cpp  env_assign.hpp  env_base.cpp  env_base.hpp  env_detect.cpp  env_detect.hpp  env_filter.cpp  env_filter.hpp  env_para.cpp  env_para.hpp  env_peak_pair.cpp  env_peak_pair.hpp  env_rescore.cpp  env_rescore.hpp  envelope.cpp  envelope.hpp  match_env.cpp  match_env.hpp  match_env_filter.cpp  match_env_filter.hpp  match_env_refine.cpp  match_env_refine.hpp  match_env_util.cpp  match_env_util.hpp  match_env_writer.cpp  match_env_writer.hpp  prec_env.cpp  prec_env.hpp  real_env.cpp  real_env.hpp
src/envcnn/: generate_matrix.cpp  generate_matrix.hpp  score.cpp  score.hpp
src/feature/: DetailWriter.java  Makefile  charge_cmp.cpp  charge_cmp.hpp  co_table.cpp  co_table.hpp  deconv_argu.cpp  deconv_argu.hpp  deconv_data.cpp  deconv_data.hpp  deconv_data_base.cpp  deconv_data_base.hpp  deconv_ms_factory.hpp  deconv_one_sp.cpp  deconv_one_sp.hpp  deconv_para.cpp  deconv_para.hpp  deconv_peak.hpp  deconv_process.cpp  deconv_process.hpp  deconv_util.cpp  deconv_util.hpp  dp.cpp  dp.hpp  dp_a.cpp  dp_a.hpp  dp_b.cpp  dp_b.hpp  env_assign.cpp  env_assign.hpp  env_base.cpp  env_base.hpp  env_detect.cpp  env_detect.hpp  env_dist.cpp  env_dist.hpp  env_filter.cpp  env_filter.hpp  env_peak_pair.cpp  env_peak_pair.hpp  (+100 more)
src/feature_detect/: feature_detect.cpp  feature_detect.hpp  feature_para.cpp  feature_para.hpp
src/filterdiagonal/: Makefile  comp_shift_hi_mem.cpp  (+9 more)
src/para/: '  (+14 more)
workblog/: 20140226  20140227
xsl/: .prsm.xsl.swp  acids.xsl  basic-prsm.xsl  basic_prsm.xsl  denovo.xsl  index.xsl  peptide.xsl  peptides.xsl  protein.xsl  proteins.xsl  proteoform.xsl  prsm.bak  prsm.bak2  prsm.xsl  prsmSmall.xsl  prsm_anno.xsl  species.xsl  tags.xsl
(+2407 files in other folders)
